alignment resolved

--- a/app/assets/stylesheets/home/mainpage/main-index.css
+++ b/app/assets/stylesheets/home/mainpage/main-index.css
@@ -43,7 +43,7 @@ padding:0;
 
 .main-nav ul li{
 padding:14px 10px;
-margin-top:5px;
+margin-top:-3px;
 list-style:none;
 color:#84d4f0;
 font-size:17px;
